3.16.13 Layout issue fixed. NPM Update complete.

--- a/src/app/student-dash/student-dash.component.scss
+++ b/src/app/student-dash/student-dash.component.scss
@@ -2,7 +2,7 @@
   background-color: lightyellow;
 }
 
-.ng2-pagination .pagination-next {
+.ngx-pagination .pagination-next {
   font-size: 18px;
 }
 
